vlib/v/parser/tests/method_decl_on_non_local_map.vv
fn (a map[string]string) get_number() int { 
	return 1
}
